# esp32-m5dial-remote-controller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app_config.yml  sdkconfig  sdkconfig.old  secrets.template.yml
components/EC11_Encoder/inc/: ec11_encoder.hpp
components/EC11_Encoder/src/: ec11_encoder.cpp
docs/: architecture.md  communication.md  development.md  ui_flow.md  ui_system.md  user_guide.md
main/: CMakeLists.txt  config.hpp  main.cpp  settings.cpp  settings.hpp
main/protocol/: espnow_peer_store.cpp  espnow_peer_store.hpp  espnow_protocol.cpp  espnow_protocol.hpp  espnow_security.hpp  fatigue_protocol.hpp
main/ui/: smooth_menu.hpp  ui_controller.cpp  ui_controller.cpp.bak2  ui_controller.hpp  ui_theme.hpp
main/ui/assets/: circular_icons.hpp  menu_icons.hpp
tools/: generate_circular_icons.py  generate_menu_icons.py
